<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RateActivity">

    <EditText
        android:id="@+id/rmb"
        android:gravity="center"
        android:hint="@string/hint_txt"
        android:autofillHints="@string/btn_won_label"
        android:layout_width="match_parent"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/showOut"
        android:textSize="35sp"
        android:text="@string/app_name"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_dollar"
        android:text="@string/btn_dollar_label"
        android:onClick="onClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_euro"
        android:layout_width="match_parent"
        android:text="@string/btn_euro_label"
        android:onClick="onClick"
         android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_won"
        android:text="@string/btn_won_label"
        android:onClick="onClick"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</LinearLayout>